k8s/mongodb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: chat-app
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb-pod
      namespace: chat-app
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-container
        image: mongo:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
      volumes:
      - name: mongo-pv
        persistentVolumeClaim:
          claimName: chat-app-pvc
